# python-programming

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
scripts/: setup_venv.ps1  setup_venv.sh
src/_01-introduction/: README.md  conftest.py  generate_diagrams.py  pytest.ini  requirements.txt
src/_01-introduction/control-flow/: README.md
src/_01-introduction/data-types/: README.md
src/_01-introduction/interpreters/: README.md
src/_01-introduction/mutability/: README.md
src/_01-introduction/running-python/: README.md
src/_02-functions/: README.md  generate_diagrams.py  pytest.ini
src/_02-functions/01-definition/: README.md
src/_02-functions/02-arguments/: README.md
src/_02-functions/03-lambda-calculus/: README.md
src/_02-functions/04-lambda-usage/: README.md
src/_02-functions/05-SRP/: README.md
src/_02-functions/06-separation-of-concerns/: README.md
src/_03-modules/: README.md  conftest.py  generate_diagrams.py  pytest.ini
src/_03-modules/01-namespaces/: README.md
src/_03-modules/02-module-vs-script/: README.md
src/_03-modules/03-stdlib-batteries/: README.md
src/_03-modules/04-imports-and-symbol-tables/: README.md
src/_03-modules/05-import-mechanism-pythonpath/: README.md
src/_03-modules/06-compilation-pycache/: README.md
src/_04-classes/: README.md  conftest.py  generate_diagrams.py  pytest.ini
src/_05-exceptions/: README.md  conftest.py  generate_diagrams.py  pytest.ini
src/_06-regex/: README.md  conftest.py  pytest.ini
src/_07-html-parser/: README.md  conftest.py  generate_diagrams.py  pytest.ini
(+357 files in other folders)
