[project]
name = "python-programming"
version = "0.1.0"
description = "Materiały dydaktyczne do kursu programowania w Pythonie 3"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "plantuml>=0.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
# Szczegółowa konfiguracja testpaths jest w src/_01-introduction/pytest.ini
# Uruchamianie z korzenia projektu:
#   .venv\Scripts\python.exe -m pytest src\_01-introduction -v
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
